--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
     <!-- Custom styles for this template -->
     <link href="css/agusia.min.css" rel="stylesheet">
 	<link rel="icon" type="image/png" sizes="32x32" href="img/faviconak.png">
+	
+	
+	<!-- Hotjar Tracking Code for https://agnieszkakogus.co.uk/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2335404,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+	
 
   </head>
 
